# dta-tokwrap

./: ChangeLog  Common.am  Defaults.mak  MANIFEST  META.json  META.yml  Makefile  Makefile.PL  Makefile.am  README.pod  README.txt  User.mak  autoreconf.sh  configure.ac  distcheck.sh  dta-tokwrap-addchr.perl  dta-tokwrap-assign-cids-count.xsl  dta-tokwrap-mkindex-vec.perl  dta-tokwrap-mkindex.perl  dta-tokwrap.perl  ex2.txt.xml  examples  generate-test.perl  moonotes.txt  notes.org  packindex.perl  substr.perl  svn_id  svntag.rc  test-3k.xml  test-raw.txt+lb.xml  test.t  test1.chr.xml  test1.xml  testme.perl  xml-no-ns.perl
DTA-TokWrap/: MANIFEST  MANIFEST.SKIP  Makefile.PL  README.html  README.rpod  README.txt  TokWrap.pm  dta-tokwrap.perl  dtatw.css  ex1.chr.xml  footer.pod  footer.rpod  test1.chr.xml  testme.perl
TokWrap/: Document.pm
dahlmann/: dahlmann.xml
data/: Makefile  User.mak  test-ns.xml
doc/: Makefile  Makefile.am  dataflow-perl-files.dot  dataflow-perl.dot  dataflow-scripts.dot  dataflow.dot
doc/DTA-TokWrap/: Makefile.am  README.html  index.html  index.pod  make-pod-index.perl  pm_list
doc/DTA-TokWrap/html/: DTA.TokWrap.Base.html  DTA.TokWrap.CxData.html  DTA.TokWrap.Document.Maker.html  DTA.TokWrap.Document.html  DTA.TokWrap.Intro.html  DTA.TokWrap.Logger.html  DTA.TokWrap.Processor.html  DTA.TokWrap.Processor.mkbx.html  DTA.TokWrap.Processor.mkbx0.html  DTA.TokWrap.Processor.mkindex.html  DTA.TokWrap.Processor.standoff.html  DTA.TokWrap.Processor.standoff.xsl.html  DTA.TokWrap.Processor.tcfalign.html  DTA.TokWrap.Processor.tcfdecode.html  DTA.TokWrap.Processor.tcfdecode0.html  DTA.TokWrap.Processor.tcfencode.html  DTA.TokWrap.Processor.tcftokenize.html  DTA.TokWrap.Processor.tei2tcf.html  DTA.TokWrap.Processor.tok2xml.html  DTA.TokWrap.Processor.tok2xml.perl.html  DTA.TokWrap.Processor.tokenize.auto.html  DTA.TokWrap.Processor.tokenize.dummy.html  DTA.TokWrap.Processor.tokenize.html  DTA.TokWrap.Processor.tokenize.http.html  DTA.TokWrap.Processor.tokenize.tomasotath.html  DTA.TokWrap.Processor.tokenize.tomasotath_02x.html  DTA.TokWrap.Processor.tokenize.tomasotath_04x.html  DTA.TokWrap.Processor.tokenize.tomasotath_05x.html  DTA.TokWrap.Processor.tokenize.waste.html  DTA.TokWrap.Processor.tokenize1.html  DTA.TokWrap.Processor.txmlanno.html  DTA.TokWrap.Utils.html  DTA.TokWrap.Version.html  DTA.TokWrap.html  README.html  dta-tokwrap.perl.html
doc/dot/: Makefile  Makefile.am  Makefile.old  dataflow-perl-doc.dot  dataflow-perl-files.dot  dataflow-perl.dot  dataflow-scripts.dot  dataflow-tcf-files.dot
doc/misc/: ddc-get-rend+ctx.notes.txt  ddc-get-rend+ctx.out  ddc-get-rend+ctx.perl
doc/notes/: c-ids-2010-08-09.eml
doc/programs/: Makefile.am  dta-tokwrap.1  dta-tokwrap.html  dta-tokwrap.perl.1  dta-tokwrap.perl.html  dtatw-add-c.perl.1  dtatw-add-c.perl.html  dtatw-add-s.perl.1  dtatw-add-s.perl.html  dtatw-add-w.perl.1  dtatw-add-w.perl.html  dtatw-add-ws.perl.1  dtatw-add-ws.perl.html  dtatw-cids2local.perl.1  dtatw-cids2local.perl.html  dtatw-cids2local.perl.pod  dtatw-files.5  dtatw-files.html  dtatw-files.pod  dtatw-get-ddc-attrs.perl.1  dtatw-get-ddc-attrs.perl.html  dtatw-get-header.perl.1  dtatw-get-header.perl.html  dtatw-mkpx.perl.1  dtatw-mkpx.perl.html  dtatw-mkpx.perl.pod  dtatw-pn2p.perl.1  dtatw-pn2p.perl.html  dtatw-sanitize-header.perl.1  dtatw-sanitize-header.perl.html  dtatw-splice.perl.1  dtatw-splice.perl.html  dtatw-txml2cspan.perl.1  dtatw-txml2cspan.perl.html  dtatw-txml2cspan.perl.pod  dtatw-txml2uxml.perl.1  dtatw-txml2uxml.perl.html  dtatw-txml2uxml.perl.pod  dtatw-xml2ddc.perl.1  dtatw-xml2ddc.perl.html  (+1 more)
dta-tokwrap-utils/: ChangeLog  Common.am  Makefile.am  README.pod  README.txt  configure.ac
dta-tokwrap-utils/m4/: ax_doc.m4
dta-tokwrap-utils/scripts/: dtatw-add-c.perl  dtatw-add-ws.perl  dtatw-add-xpath.perl  dtatw-expat-ddc-attrs.perl  dtatw-generate-test.perl  dtatw-get-ddc-attrs.perl  dtatw-hack-tokenizer-output.perl  dtatw-pn2p.perl  dtatw-restore-namespaces.perl  dtatw-txmlsort.xsl  dtatw-xml2ddc.perl  xml_header
dta-tokwrap-utils/scripts/tests/: badutf8.xml  brandes0.xml  head.xml  nstest.xml  seg2pn.xml  tei-header.ttk  toktest-badabbr.txt
dta-tokwrap-utils/src/: Makefile.am  dtatw-mkindex.c  dtatwCommon.c  dtatwCommon.h  graveyard.c
examples/: berg_ostasienbotanik_1866_pb.txt.xml  boeheim_waffenkunde_1890.txt.xml  diesterweg_universitaeten_1836_pb.txt.xml  huber_verkehr_1893_pb.txt.xml  kant_pvernunft_1788_pb.txt.xml  kraepelin_arzneimittel_1892.txt+lb.xml  (+1 more)
scripts/: Makefile.am  dtatw-add-c.perl  dtatw-add-s.perl  dtatw-add-w.perl  dtatw-add-ws.perl  dtatw-add-xpath.perl  dtatw-cabtt2xml.perl  dtatw-cids2local.perl  dtatw-cx-check.perl  dtatw-cxb2csv.perl  dtatw-dtaid.sh  dtatw-ensure-lb.perl  dtatw-fast-ddc-attrs.perl  dtatw-format.perl  dtatw-get-ddc-attrs.perl  dtatw-get-header.perl  dtatw-insert-header.perl  dtatw-lb-encode.perl  dtatw-ls-ids.perl  dtatw-lsblocks.perl  dtatw-mkpx.perl  dtatw-nsdefault-decode.perl  dtatw-nsdefault-encode.perl  dtatw-percent-encode.perl  dtatw-rm-c.perl  dtatw-rm-s.perl  dtatw-rm-w.perl  dtatw-rm-ws.perl  dtatw-sanitize-header.perl  dtatw-sanitize-prevnext.perl  dtatw-sb2p.perl  dtatw-seg2prevnext.perl  dtatw-serialize-prevnext.xsl  dtatw-splice.perl  dtatw-t-check.perl  dtatw-tt2xml.perl  dtatw-txml2axml.xsl  dtatw-txml2cspan.perl  dtatw-txml2sxml.xsl  dtatw-txml2tt.xsl  (+6 more)
scripts/tests/: aux.tj  encbench.perl  kant-a.xml  test1.xml
src/: Makefile.am  config.h  dtatw-b2xb.c  dtatw-check-depth.c  dtatw-cx2dat.c  dtatw-cxlexer.c  dtatw-cxlexer.h  dtatw-cxlexer.l  dtatw-mkindex-bin.c  dtatw-mkindex.c  dtatw-mkindex.c+f  dtatw-rm-namespaces.c  dtatw-t2xml.c  dtatw-tok2xml.c  dtatw-tokenize-dummy.c  dtatw-tokenize-dummy.l  dtatw-txml2axml.c  dtatw-txml2master.c  dtatw-txml2master.c.save  dtatw-txml2master.c.save2  dtatw-txml2master.c.save3  dtatw-txml2master.perl  dtatw-txml2sxml.c  dtatw-txml2wxml.c  dtatw-xml-depth.c  dtatwCommon.c  dtatwCommon.h  dtatwConfig.h  dtatwExpat.c  dtatwExpat.h  dtatwUtf8.c  dtatwUtf8.h  graveyard.c  strerror.c  xml-rm-namespaces.c
(+219 files in other folders)
